syntax="proto3";

package subdistrict;

option go_package="/";

import "google/protobuf/empty.proto";

service SubdistrictService {
    rpc GetAllSubdistricts(google.protobuf.Empty) returns (GetAllSubdistrictsResponse) {}
    rpc GetSubdistrictByID(GetSubdistrictByIDRequest) returns (GetSubdistrictByIDResponse) {}
    rpc GetSubdistrictsByIDs(GetSubdistrictsByIDsRequest) returns (GetSubdistrictsByIDsResponse) {}
}

// GetAllSubdistricts
message GetAllSubdistrictsResponse {
    Header header = 1;
    repeated SubdistrictData data = 2;
}

// GetSubdistrictByID
message GetSubdistrictByIDRequest {
    GetSubdistrictByIDInput request = 1;
}

message GetSubdistrictByIDInput {
    string id = 1;
}

message GetSubdistrictByIDResponse {
    Header header = 1;
    SubdistrictData data = 2;
}

// GetSubdistrictsByIDs
message GetSubdistrictsByIDsRequest {
    GetSubdistrictsByIDsInput request = 1;
}

message GetSubdistrictsByIDsInput {
    repeated string id = 1;
}

message GetSubdistrictsByIDsResponse {
    Header header = 1;
    repeated SubdistrictData data = 2;
}

// Base Data
message SubdistrictData {
    string subdistrictID = 1;
    string subdistrictName = 2;
    string subdistrictType = 3;
    string postalCode = 4;
    string districtID = 5;
}

message Header {
    int32 status = 1;
    repeated string message = 2;
}

message OptionalString {
    string value = 1;
    bool hasSet = 2;
}
